--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,16 +2,29 @@ server:
   port: 9000
 spring:
   rabbitmq:
-    host: 127.0.0.1
-    port: 5672
-    username: guest
-    password: guest
-    #虚拟host 可以不设置,使用server默认host
-    virtual-host: /
-    #消息确认配置项
-    #确认消息已发送到交换机(Exchange)
-    publisher-confirm-type: correlated
-    # springboot版本低用下面这个，版本高用上面这个
-#    publisher-confirms: true
-    #确认消息已发送到队列(Queue)
-    publisher-returns: true
+    host: 127.0.0.1 # 用户名
+    port: 5672      # port
+    username: guest # 用户名
+    password: guest # 密码
+    virtual-host: / # 指定连接到broker的Virtual host.
+    # NONE值是禁用发布确认模式，是默认值
+    # CORRELATED值是发布消息成功到交换器后会触发回调方法，如1示例
+    # SIMPLE值经测试有两种效果，其一效果和CORRELATED值一样会触发回调方法，其二在发布消息成功后使用rabbitTemplate调用waitForConfirms或waitForConfirmsOrDie方法等待broker节点返回发送结果，根据返回结果来判定下一步的逻辑，要注意的点是waitForConfirmsOrDie方法如果返回false则会关闭channel，则接下来无法发送消息到broker;
+    publisher-confirm-type: correlated # 发布确认属性配置
+    # publisher-confirms: true # springboot版本低用下面这个，版本高用上面这个
+    publisher-returns: true # 确认消息已发送到队列(Queue) 开启发送失败退回
+    dynamic: true # 是否创建AmqpAdmin bean. 默认为: true)
+    addresses: # 指定client连接到的server的地址，多个以逗号分隔.
+    connection-timeout: 0 # 连接超时时间，单位毫秒，0表示永不超时
+    listener:
+      simple:
+        retry:
+          enabled: true # 开启消费者进行重试
+          max-attempts: 5 # 最大重试次数
+          initial-interval: 3000 # 重试时间间隔
+
+
+
+
+
+
