--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,10 @@ dependencies {
     // rabbitmq
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
 
+    // swagger
+    implementation 'io.springfox:springfox-swagger2:2.7.0'
+    implementation 'io.springfox:springfox-swagger-ui:2.7.0'
+
 }
 
 test {
