--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,10 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 repositories {
-    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
-//    mavenCentral()
+    maven { url 'https://maven.aliyun.com/repository/public/' }
+    maven { url 'https://maven.aliyun.com/repository/central/'}
+    mavenLocal()
+    mavenCentral()
 }
 
 dependencies {
@@ -22,9 +24,8 @@ dependencies {
     // rabbitmq
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
 
-    // swagger
-    implementation 'io.springfox:springfox-swagger2:2.7.0'
-    implementation 'io.springfox:springfox-swagger-ui:2.7.0'
+    // swagger增强：knife4j
+    implementation 'com.github.xiaoymin:knife4j-spring-boot-starter:3.0.3'
 
 }
 
