--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,25 +10,25 @@ spring:
     password: guest # 密码
     virtual-host: / # 指定连接到broker的Virtual host.
     publisher-confirm-type: none
-    publisherReturns: false
+    publisherReturns: false  # 结合 RabbitTemplate 的回调方法（如 setReturnCallback）来处理返回的消息
     connectionTimeout: 10000
 
     # NONE值是禁用发布确认模式，是默认值
     # CORRELATED值是发布消息成功到交换器后会触发回调方法，如1示例
     # SIMPLE值经测试有两种效果，其一效果和CORRELATED值一样会触发回调方法，其二在发布消息成功后使用rabbitTemplate调用waitForConfirms或waitForConfirmsOrDie方法等待broker节点返回发送结果，根据返回结果来判定下一步的逻辑，要注意的点是waitForConfirmsOrDie方法如果返回false则会关闭channel，则接下来无法发送消息到broker;
-#    publisher-confirm-type: correlated # 发布确认属性配置
-#    # publisher-confirms: true # springboot版本低用下面这个，版本高用上面这个
-#    publisher-returns: true # 确认消息已发送到队列(Queue) 开启发送失败退回
-#    dynamic: true # 是否创建AmqpAdmin bean. 默认为: true)
-#    addresses: # 指定client连接到的server的地址，多个以逗号分隔.
-#    connection-timeout: 0 # 连接超时时间，单位毫秒，0表示永不超时
-#    listener:
-#      simple:
-#        retry:
-#          enabled: true # 开启消费者进行重试
-#          max-attempts: 5 # 最大重试次数
-#          initial-interval: 3000 # 重试时间间隔
-#        acknowledge-mode: manual
+#    publisher-confirm-type: correlated # 发布确认属性配置 结合 RabbitTemplate 的回调方法（如 setConfirmCallback）或同步确认方法来处理确认结果。
+    #publisher-confirms: true # springboot版本低用下面这个，版本高用上面这个
+    publisher-returns: true # 确认消息已发送到队列(Queue) 开启发送失败退回
+    dynamic: true # 是否创建AmqpAdmin bean. 默认为: true)
+    addresses: # 指定client连接到的server的地址，多个以逗号分隔.
+    connection-timeout: 0 # 连接超时时间，单位毫秒，0表示永不超时
+    listener:
+      simple:
+        retry:
+          enabled: true # 开启消费者进行重试
+          max-attempts: 5 # 最大重试次数
+          initial-interval: 3000 # 重试时间间隔
+        acknowledge-mode: manual
 
 dicp:
   market:
